Se arreglaron las pruebas y covertura